--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.3.1",
-    "generator-alfresco-common": "^0.9.25",
+    "loadash": "^1.0.0",
     "yeoman-generator": "^2.0.2"
   }
 }
